Editar, Agregar y ver usuarios funcionan correctamente

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,7 +11,7 @@
 <body>
     <div class="container body-content">
 
-        @model Opiniometro_WebApp.Models.Persona
+        @model Opiniometro_WebApp.Models.ViewModelAdmin
 
         @{
             ViewBag.Title = "Index";
@@ -28,53 +29,61 @@
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
+                
+            <div class="form-horizontal">
+                <h4>Editar Usuario</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.persona.Cedula)
 
-                <div class="form-horizontal">
-                    <h4>Editar Usuario</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Cedula)
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })     
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <!--@Html.LabelFor(model => model.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
-                        <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Apellido1, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <!--@Html.LabelFor(model => model.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
-                        <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Apellido2, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Guardar" class="btn btn-default" />
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.persona.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.persona.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.persona.Nombre, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <!--@Html.LabelFor(model => model.persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
+                    <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.persona.Apellido1, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <!--@Html.LabelFor(model => model.persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
+                    <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.persona.Apellido2, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.usuario.CorreoInstitucional, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.persona.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.persona.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.persona.Direccion, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Guardar" class="btn btn-default" />
+                    </div>
+                </div>
+            </div>
             }
         </div>
     </div>
@@ -83,4 +92,5 @@
     @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
+
 
