cambios en la vista para tener en la misma vista las tablas de items y secciones

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.Formulario
+﻿@model Opiniometro_WebApp.Models.CrearFormularioModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -12,17 +12,79 @@
                 <td>
                 
                     <div class="row">
-                        <h4>Codigo: @Model.CodigoFormulario </h4>
-                        <h4>Nombre: @Model.Nombre</h4>
+                        <h4>Codigo: @Model.Formulario.CodigoFormulario </h4>
+                        <h4>Nombre: @Model.Formulario.Nombre</h4>
                     </div>
 
                     <div>
                         <div style="float: right; width: 500px; padding: 15px;">
-                            @Html.Action("preguntasVParcial")
+
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>
+                                        @Html.Label("Código")
+                                    </td>
+                                    <td>
+                                        @Html.Label("Planteamiento")
+                                    </td>
+                                    <td>
+                                        @Html.Label("Tipo")
+                                    </td>
+                                </tr>
+
+
+                                @foreach (var item in Model.Items)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.ItemId)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TextoPregunta)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TipoPregunta)
+                                        </td>
+                                        <td>
+                                            <input type="checkbox" class="chcktbl" id="check-@item.ItemId"/>
+                                        </td>
+                                    </tr>
+                                }
+
+                            </table>
+
                         </div>
 
                         <div style=" width: 500px; padding:  15px;">
-                            @Html.Action("seccionesVParcial")
+
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>
+                                        @Html.Label("Titulo")
+                                    </td>
+                                    <td>
+                                        @Html.Label("Descripción")
+                                    </td>
+                                </tr>
+
+
+                                @foreach (var seccion in Model.Secciones)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(model => seccion.Titulo)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(model => seccion.Descripcion)
+                                        </td>
+                                        <td>
+                                            <input type="checkbox" class="chcktbl" id="check-@seccion.Titulo" />
+                                        </td>
+                                    </tr>
+                                }
+
+                            </table>
+
                         </div>
                     </div>
 
@@ -32,8 +94,8 @@
                     </button>
 
                     <div style="float: left; width: 1000px; padding: 50px;">
-                        @Html.Action("SeccionesAsignadas", new
-                                    {CodForm = Model.CodigoFormulario})
+                        @*@Html.Action("SeccionesAsignadas", new
+                                    {CodForm = Model.Formulario.CodigoFormulario})*@
                     </div>
 
                     <input type="submit" value="Generate report" />
