--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -36,7 +36,7 @@
                     @Html.HiddenFor(model => model.Persona.Cedula)
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Persona.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })     
+                        @Html.LabelFor(model => model.Persona.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Persona.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Persona.Nombre, "", new { @class = "text-danger" })
@@ -51,7 +51,6 @@
                             @Html.ValidationMessageFor(model => model.Persona.Apellido1, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
                     <div class="form-group">
                         <!--@Html.LabelFor(model => model.Persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
                         <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
@@ -67,20 +66,51 @@
                             @Html.EditorFor(model => model.Persona.Direccion, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Persona.Direccion, "", new { @class = "text-danger" })
                         </div>
-                    </div>
 
+                    </div>
+                    <br>                                
                     <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Guardar" class="btn btn-default" />
+                        <div class="col-md-10">
+                            <div class="col-md-2">
+                                <div style="margin-left:80px; width: 200px ">
+                                    <table class="table">
+                                    @{
+                                        if (Model.Perfil != null)
+                                      {
+                                        <tr>
+                                            <th>
+                                                Perfiles
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                            for (int i = 0; i < Model.Perfil.Count; i++)
+                                            {
+                                                <tr>
+                                                <td>@Model.Perfil.ElementAt(i)</td>
+                                                    <td><input type="checkbox" name="prueba" value="prueba"> <br></td>
+                                                </tr>
+                                                   }
+                                              }
+                                        }      
+                                          
+                                    </table>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>                      
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" value="Guardar" class="btn btn-default" />
+                                    </div>
+                                </div>
+                            </div>
+                            }
                         </div>
                     </div>
-                </div>
-            }
-        </div>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+                    @Scripts.Render("~/bundles/jquery")
+                    @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
 
