--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -46,7 +46,7 @@
                                             @Html.DisplayFor(modelItem => item.TipoPregunta)
                                         </td>
                                         <td>
-                                            <input type="checkbox" class="chcktbl" id="check-@item.ItemId"/>
+                                            <input type="checkbox" class="chcktbl" id="@item.ItemId"/>
                                         </td>
                                     </tr>
                                 }
@@ -78,7 +78,7 @@
                                             @Html.DisplayFor(model => seccion.Descripcion)
                                         </td>
                                         <td>
-                                            <input type="checkbox" class="chcktbl" id="check-@seccion.Titulo" />
+                                            <input type="checkbox" class="chcktbl" id="@seccion.Titulo" />
                                         </td>
                                     </tr>
                                 }
