--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/SeleccionPermisos/SeleccionarPermisos.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/SeleccionPermisos/SeleccionarPermisos.cshtml
@@ -1,6 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.SeleccionPermisos
-
-@{
+﻿@{
     ViewBag.Title = "Administrar Permisos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -14,7 +12,7 @@
     <table class="table">
         <tr>
             <th>@Html.Label("Perfil")</th>
-            <td>@Html.DropDownList("Perfiles", ) </td>
+            <td>@Html.DropDownList("Perfiles", new SelectList(Model.ListaPerfilesId), "Elegir perfil", new { @class = "form-control float-left" }) </td>
         </tr>
     </table>
 
