Vista Previa Version 2 funcional

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -9,7 +9,7 @@
     <input type="submit" value="Crear Nueva Pregunta" class="btn btn-secondary" id="botonNuevaPregunta" onclick="location.href = 'http://localhost:51103/Item/create'" />
 </p>
 
-<table class="table">
+<table class="table" id="vistaitem">
     <tr>
         <th>
             @Html.Label("Código")
@@ -32,77 +32,60 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ItemId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TextoPregunta)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NombreCategoria )
-        </td>
-        <td>
-            @if (item.TieneObservacion == true)
-            {
-                <input type="checkbox" checked disabled>
-            }
-        </td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ItemId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TextoPregunta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NombreCategoria)
+            </td>
+            <td>
+                @if (item.TieneObservacion == true)
+                {
+                    <input type="checkbox" checked disabled>
+                }
+            </td>
 
-            <td contextmenu="5">
+
+
+            <td>
                 @* @Html.ActionLink("Edit", "Edit", new { id = item.ItemId }) |*@
-                <button class="btn btn-primary" data-target="#vista" data-toggle="modal">Vista Previa</button>|
+                <button class="btn btn-primary" identificador="@item.ItemId">Vista Previa</button>
 
-                @Html.ActionLink("Vista Previa", "VistaPrevia", new { id = item.ItemId })
+                |@Html.ActionLink("Vista Previa", "VistaPrevia", new { id = item.ItemId })
                 @* @Html.ActionLink("Delete", "Delete", new { id = item.ItemId })*@
             </td>
-        </tr>
 
+        </tr>
+        <tr id="detalle-@item.ItemId" style="display:none">
+            <td></td>
+            <td colspan="5">
+                @Html.Action("VistaPrevia", new { id = item.ItemId })
+            </td>
+        </tr>
 
 
     }
 
 </table>
 
-<html>
-<head>
-    <title></title>
-    <meta charset="utf-8" />
-    <link href="css/bootstrap.css" rel="stylesheet" />
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-
-            <div class="modal" id="vista" tabindex="-1">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <label>Vista Previa</label>
-                        </div>
-                        <div class="modal-body">
-                            
-                            
-                            <form>
-                                <div class="form-group">
-                                    <label>Pregunta</label>
-                                
-                                </div>
-                            </form>
-                                                    
-                            <div class="modal-footer">
-                                <button value="Close" data-dismiss="modal" id="close">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-
-</body>
-</html>
+@section scripts{
+    <script type="text/javascript">
+        $(function () {
+            $("#vistaitem tr button").click(function () {
+                var identificador = $(this).attr("identificador");
+                var detalle = $("#detalle-" + identificador);
+                if (detalle.css("display") == "none") {
+                    detalle.css("display", "table-row");
+                } else {
+                    detalle.css("display", "none");
+                }
+            });
+        });
+    </script>
+    }
