Mejora visuales en las barras.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
 
     @if (IdentidadManager.usuario_loggeado() == true)
     {
-        <nav class="navbar navbar-opiniometro-secundaria navbar-fixed-top" style="margin-top:100px; z-index:3">
-            <div class="container">
+        <nav class="navbar navbar-opiniometro-secundaria navbar-fixed-top" style="margin-top:100px"; z-index:3">
+            <div class="container-fluid" style="margin-left:100px">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Bienvenido", "Index", "Home")</li>
@@ -44,7 +44,7 @@
         </nav>
 
         <nav class="navbar navbar-opiniometro-ternaria navbar-fixed-top" style="margin-top:150px; z-index:2">
-            <div class="container">
+            <div class="container-fluid">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Opiniómetro@UCR", "Index", "Home")</li>
                     <li class="dropdown">
@@ -71,7 +71,7 @@
 
     <br /><br /><br /><br />
 
-    <div class="container body-content">
+    <div class="container-fluid">
         @RenderBody()
         <hr />
         <footer>
