--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-principal navbar-fixed-top" style="z-index:1">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <div style="height:105px; width: 570px; overflow: hidden" text-align="center">
                 <a class="navbar-brand-barra-login" href="/">
