Margen barra y layout

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar navbar-principal navbar-fixed-top" style="z-index:1">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div style="height:105px; width: 570px; overflow: hidden" text-align="center">
+            <div style="height:105px; width: 570px; margin-left:100px ;overflow: hidden" text-align="center">
                 <a class="navbar-brand-barra-login" href="/">
                     <img src="~/Content/firma-ucr-c.svg" width="1100">
                 </a>
