--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-opiniometro-ternaria navbar-fixed-top" style="margin-top:150px; z-index:2">
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Opiniómetro@UCR", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Opiniómetro@UCR", "Index", "Home", new { style = "margin-left:100px" })</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuario<span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -71,7 +71,7 @@
 
     <br /><br /><br /><br />
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-left:100px" >
         @RenderBody()
         <hr />
         <footer>
