--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -1,15 +1,4 @@
 ﻿
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div class="container body-content">
 
         @model Opiniometro_WebApp.Models.ViewModelAdmin
 
@@ -34,18 +23,18 @@
                 <h4>Editar Usuario</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                
+
+                @Html.HiddenFor(Model => Model.persona.Cedula)
                 <div class="form-group">
                     @Html.LabelFor(model => model.persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.Raw(Model.persona.Cedula)
-
+                    <div class="col-md-3">
+                        @Html.DisplayTextFor(Model => Model.persona.Cedula)
                     </div>
                 </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.persona.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-3">
                         @Html.EditorFor(model => model.persona.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.persona.Nombre, "", new { @class = "text-danger" })
                     </div>
@@ -54,7 +43,7 @@
                 <div class="form-group">
                     <!--@Html.LabelFor(model => model.persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
                     <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
-                    <div class="col-md-10">
+                    <div class="col-md-3">
                         @Html.EditorFor(model => model.persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.persona.Apellido1, "", new { @class = "text-danger" })
                     </div>
@@ -63,7 +52,7 @@
                 <div class="form-group">
                     <!--@Html.LabelFor(model => model.persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
                     <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
-                    <div class="col-md-10">
+                    <div class="col-md-3">
                         @Html.EditorFor(model => model.persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.persona.Apellido2, "", new { @class = "text-danger" })
                     </div>
@@ -71,7 +60,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-3">
                         @Html.EditorFor(model => model.usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.usuario.CorreoInstitucional, "", new { @class = "text-danger" })
                     </div>
@@ -79,28 +68,23 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.persona.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-3">
                         @Html.EditorFor(model => model.persona.Direccion, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.persona.Direccion, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-offset-2 col-md-3">
                         <input type="submit" value="Guardar" class="btn btn-default" />
                     </div>
                 </div>
             </div>
-                <div>
+                <div class="col-md-offset-2 col-md-3">
                     @Html.ActionLink("Volver", "VerPersonas")
                 </div>
             }
         </div>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-</body>
-</html>
 
 
