--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/SeleccionPermisos/SeleccionarPermisos.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/SeleccionPermisos/SeleccionarPermisos.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
     ViewBag.Title = "Administrar Permisos";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Administrar Permisos</h2>
@@ -9,12 +8,27 @@
 
 @using (Html.BeginForm("Guardar", "SeleccionPermisos"))
 {
-    <table class="table">
-        <tr>
-            <th>@Html.Label("Perfil")</th>
-            <td>@Html.DropDownList("Perfiles", new SelectList(Model.ListaPerfilesId), "Elegir perfil", new { @class = "form-control float-left" }) </td>
-        </tr>
-    </table>
+    <div style="width : 200px;">
+        @Html.Label("Perfil")
+        @Html.DropDownList("Perfiles", new SelectList(Model.ListaPerfilesId), "Elegir perfil", new { @class = "form-control" })
+
+        <br />
+
+        <table class="table">
+            <tr>
+                <th>Permisos</th>
+            </tr>
+
+            @for (int i = 0; i < Model.ListaPermisos.Count; i++)
+            {
+                <tr>
+                    <td>
+                        @Model.ListaPermisos[i].Descripcion
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 
     <p align="right">
         <button class="btn btn-default" type="submit">Guardar</button>
